<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/xrade_signal_view_signal_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/volatility_100_index"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/xrade_signal_view_action_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_yellow"
                    android:layout_marginRight="20dp"
                    android:textSize="25sp"
                    android:text="---"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/default_indicator_back_rounded"
                android:layout_marginTop="20dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rsi"
                            android:textSize="30sp"
                            android:textColor="@color/white"
                            />
                        <TextView
                            android:id="@+id/xrade_signal_view_rsi_value_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="--.--"
                            android:textSize="15sp"
                            android:textColor="@color/black_yellow"/>
                    </LinearLayout>


                    <FrameLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_80"
                                    android:textSize="20sp"
                                    android:textColor="@color/white"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintLeft_toLeftOf="parent"/>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintRight_toRightOf="parent">
                                    <ImageView
                                        android:id="@+id/xrade_signal_view_rsi_cross_80_up_image_view"
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:src="@drawable/ic_red_circle"/>
                                    <ImageView
                                        android:id="@+id/xrade_signal_view_rsi_cross_80_down_image_view"
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:layout_marginLeft="50dp"
                                        android:src="@drawable/ic_red_circle"/>
                                </LinearLayout>
                            </androidx.constraintlayout.widget.ConstraintLayout>


                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_marginTop="25dp"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/range_cross"
                                    android:textColor="@color/white"
                                    android:visibility="invisible"
                                    android:textSize="17sp"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"/>
                            </androidx.constraintlayout.widget.ConstraintLayout>


                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_marginTop="25dp"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_30"
                                    android:textSize="20sp"
                                    android:textColor="@color/white"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintLeft_toLeftOf="parent"/>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintRight_toRightOf="parent">
                                    <ImageView
                                        android:id="@+id/xrade_signal_view_rsi_cross_20_down_image_view"
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:src="@drawable/ic_red_circle"/>
                                    <ImageView
                                        android:id="@+id/xrade_signal_view_rsi_cross_20_up_image_view"
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:layout_marginLeft="50dp"
                                        android:src="@drawable/ic_red_circle"/>
                                </LinearLayout>
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>
                    </FrameLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </FrameLayout>








            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/default_indicator_back_rounded"
                android:layout_marginTop="25dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stoch"
                            android:textSize="30sp"
                            android:textColor="@color/white"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"/>
                        <TextView
                            android:id="@+id/xrade_signal_view_stoch_value_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="--.-- - --.--"
                            android:textSize="15sp"
                            android:textColor="@color/black_yellow"/>
                    </LinearLayout>


                    <FrameLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_80"
                                    android:textSize="20sp"
                                    android:textColor="@color/white"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintLeft_toLeftOf="parent"/>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintRight_toRightOf="parent">
                                    <ImageView
                                        android:id="@+id/xrade_signal_view_stoch_cross_80_up_image_view"
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:src="@drawable/ic_red_circle"/>
                                    <ImageView
                                        android:id="@+id/xrade_signal_view_stoch_cross_80_down_image_view"
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:layout_marginLeft="50dp"
                                        android:src="@drawable/ic_red_circle"/>
                                </LinearLayout>
                            </androidx.constraintlayout.widget.ConstraintLayout>


                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_marginTop="25dp"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:id="@+id/xrade_signal_view_stoch_range_cross_text_view"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/range_cross"
                                    android:visibility="invisible"
                                    android:textColor="@color/white"
                                    android:textSize="17sp"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"/>
                            </androidx.constraintlayout.widget.ConstraintLayout>


                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_marginTop="25dp"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_30"
                                    android:textSize="20sp"
                                    android:textColor="@color/white"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintLeft_toLeftOf="parent"/>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintRight_toRightOf="parent">
                                    <ImageView
                                        android:id="@+id/xrade_signal_view_stoch_cross_20_down_image_view"
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:src="@drawable/ic_red_circle"/>
                                    <ImageView
                                        android:id="@+id/xrade_signal_view_stoch_cross_20_up_image_view"
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:layout_marginLeft="50dp"
                                        android:src="@drawable/ic_red_circle"/>
                                </LinearLayout>
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>
                    </FrameLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </FrameLayout>
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:layout_marginTop="20dp">

            </FrameLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>
</merge>





